--- a/package.json
+++ b/package.json
@@ -37,13 +37,15 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.11.0",
     "@tailwindcss/forms": "^0.5.7",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.19",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.11.0",
+    "postcss": "^8.4.38",
     "postcss-preset-env": "^9.1.1",
     "posthtml-include": "^1.7.4",
     "rimraf": "^5.0.1",
-    "sharp": "^0.31.1"
+    "sharp": "^0.31.1",
+    "tailwindcss": "^3.4.4"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
